--- a/apps/administrator/templates/administrator/album_detail.html
+++ b/apps/administrator/templates/administrator/album_detail.html
@@ -8,7 +8,7 @@
 
 {% block main_content %}
 
-<div class="row">    
+  
     <ul class="thumbnails">
             <li class="span4">
               <a class="thumbnail" href="#">
@@ -21,8 +21,8 @@
             </li>
            
           </ul>
-
-    {{ album_form }}
-    <input type="submit" value="Save Album" class="btn btn-primary">
-</div>
+{% load crispy_forms_tags %}
+{% crispy album_form %}
+        <input type="submit" value="Save Album" class="btn btn-primary">
+    
 {% endblock main_content %}
