--- a/themes/twitter/templates/twitter/slideshow.html
+++ b/themes/twitter/templates/twitter/slideshow.html
@@ -37,6 +37,7 @@
         </script>
     </head>
     <body>
+        <div id="wrapper">
         <div id="slideshow" class="pics">
             
             {% for photo in initial_photos %}
@@ -47,6 +48,6 @@
             {% endfor %}
              
         </div>
-        
+        </div>
     </body>
 </html>
