--- a/static/cycle/slideshow.css
+++ b/static/cycle/slideshow.css
@@ -1,8 +1,13 @@
 body
 {
     background: #2E2928;
-    text-align: center;
     margin-top: 50px;
+}
+
+#wrapper
+{
+    margin: 0 auto;
+    width: 1070px;
 }
 
 
