--- a/apps/administrator/templates/administrator/locations.html
+++ b/apps/administrator/templates/administrator/locations.html
@@ -114,7 +114,7 @@ rules: [
 <div class="well">
     <h4>Locations</h4>
     <ul class="unstyled">
-    {% load location_slugs %}
+    {% load location_tags %}
     {% for location in locations %}
         <li><i class="icon-map-marker"></i>  <span class="label label-success">{% location_photo_count location.slug %} Photos</span> {{ location }}</li>
     {% endfor %}
