--- a/themes/twitter/templates/twitter/map.html
+++ b/themes/twitter/templates/twitter/map.html
@@ -6,6 +6,7 @@
 {% include "twitter/nav.html" with current=3 %}
 {% endblock nav %}
 {% block extra_head %}
+{% load location_tags %}
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <script>
   function initialize() {
@@ -56,7 +57,7 @@ rules: [
       var content{{ location.id }} = '<div id="content">'+
           
           
-          '<p><a style="color:#2d2d2d;" href="{% if current_user %}{% url photo_manager.views.location location_slug=location.slug username=current_user.username %}{% else %}{% url photo_manager.views.location location_slug=location.slug %}{% endif %}">{{ location }} ({{ location.get_photo_count }})</a></p>' +
+          '<p><a style="color:#2d2d2d;" href="{% if current_user %}{% url photo_manager.views.location location_slug=location.slug username=current_user.username %}{% else %}{% url photo_manager.views.location location_slug=location.slug %}{% endif %}">{{ location }} ({% location_photo_count location.slug %})</a></p>' +
           
           '</div>';
       var infowindow{{ location.id }} = new google.maps.InfoWindow({
