--- a/themes/twitter/templates/twitter/albums.html
+++ b/themes/twitter/templates/twitter/albums.html
@@ -25,13 +25,9 @@
 </ul>
 
 <div class="page-header">
-    <h2>{{ album.title }} {% if photos %}<button id="start-slideshow" class="btn btn-small pull-right" data-slideshow="5000" data-target="#modal-gallery" data-selector="#gallery a[rel=gallery]">Slideshow <i class="icon icon-th-large"></i></button>{% endif %}</h2>
+    <h2>{{ album.title }}</h2>
 </div>
-<div id="gallery" data-toggle="modal-gallery" data-target="#modal-gallery">
-{% for photo in full_album %}
-    {% include "twitter/snippets/slideshow_list.html" %}
-{% endfor %}
-</div>
+
 <ul class="thumbnails">
 
 {% for photo in photos.object_list %}
@@ -47,7 +43,7 @@
 
 {% for album in albums.object_list %}
     <li class="span3">
-        <a href="{{ album.get_absolute_url }}" class="thumbnail">
+        <a href="{{ album.get_absolute_url }}" class="thumbnail polaroid">
             {% if album.album_cover %}
                     {% load thumbnail %}
                     {% thumbnail album.album_cover "300x220" as im %}
@@ -64,8 +60,9 @@
                     <img src="http://dummyimage.com/260x180">
                     {% endif %}
             {% endif %}
+        <span>{{ album.title }}</span>
         </a>
-        <h4>{{ album.title }}</h4>
+        
     </li>
 
 {% endfor %}
