--- a/apps/administrator/templates/administrator/dashboard.html
+++ b/apps/administrator/templates/administrator/dashboard.html
@@ -6,8 +6,11 @@
 <div class="page-header">
 <h2>Recent Uploads</h2>
 </div>
-<ul class="thumbnails">
+
 {% for photo in photos.object_list %}
+{% if forloop.counter == 1 or forloop.counter == 5 or forloop.counter == 9 or forloop.counter == 13 %}
+<ul class="thumbnails row">
+{% endif %}
     <div class="modal hide fade" id="deletePhoto_{{ photo.id }}">
         <div class="modal-header">
           <a data-dismiss="modal" class="close">×</a>
@@ -47,17 +50,26 @@
     </a>
     <div class="caption">
         <div class="controls">
-            <input type="text" value="{{ photo.title }}" class="span2">
-            <textarea class="span2">{{ photo.description }}</textarea>
+            <form method="POST" action="{% url administrator.views.edit_photo photo_id=photo.id %}">
+            {% csrf_token %}
+            <input type="text" name="title" value="{{ photo.title }}" class="span2">
+            <textarea class="span2" name="description">{{ photo.description }}</textarea>
+            <label>Album</label>
+            <select name="album" class="span2">
+            {% for album in form_albums %}
+                <option value="{{ album.id }}">{{ album }}</option>
+            {% endfor %}
+            </select>
             <label>Location</label>
             <select name="location" class="span2">
                 {% for location in form_locations %}
-                <option value="{{ location.slug }}">{{ location }}</option>
+                <option value="{{ location.id }}">{{ location }}</option>
                 
                 {% endfor %}
             </select>
             <a href="#deletePhoto_{{ photo.id }}" data-toggle="modal" class="btn btn-danger">Delete <i class="icon-trash icon-white"></i></a>
-            <a href="#" class="btn btn-success">Save</a>
+            <input type="submit" value="Save" class="btn btn-success">
+            </form>
         </div>
       <h5>{{ photo.title }}</h5>
       {% if photo.description %}
@@ -69,10 +81,11 @@
       
     </div>
     </li>
+    {% if forloop.counter == 4 or forloop.counter == 8 or forloop.counter == 12 or forloop.counter == 16 %}
+    </ul>
+    {% endif %}
 {% endfor %}
-    
-    
-</ul>
+
 <div class="pagination">
     <ul>
         {% if photos.has_previous %}
