--- a/apps/administrator/templates/administrator/nav.html
+++ b/apps/administrator/templates/administrator/nav.html
@@ -4,8 +4,9 @@
       <li {% if nav == 1 %}class="active"{% endif %}><a href="{% url admin_dashboard %}"><i class="{% if nav == 1 %}icon-white{% endif %} icon-home"></i> Home</a></li>
       <li {% if nav == 2 %}class="active"{% endif %}><a href="{% url admin_albums %}"><i class="{% if nav == 2%}icon-white{% endif %} icon-book"></i> Albums</a></li>
       <li {% if nav == 3 %}class="active"{% endif %}><a href="{% url admin_locations %}"><i class="{% if nav == 3 %}icon-white{% endif %} icon-map-marker"></i> Locations</a></li>
-      <li class="nav-header">Profile and Settings</li>
+      <li class="nav-header">Settings</li>
       <li {% if nav == 5 %}class="active"{% endif %}><a href="{% url settings %}"><i class="icon-cog"></i> Settings</a></li>
+      <li {% if nav == 6 %}class="active"{% endif %}><a href="{% url admin_utilities %}"><i class="icon-list-alt"></i> Utilities</a></li>
       
     </ul>
 </div>
