--- a/apps/administrator/templates/administrator/dashboard.html
+++ b/apps/administrator/templates/administrator/dashboard.html
@@ -121,6 +121,8 @@
         <dd>{{ total_locations }}</dd>
         <dt>Size on Disk</dt>
         <dd>{{ total_size }}</dd>
+        <dt>Cache Size</dt>
+        <dd>{{ cache_size }}</dd>
     </dl>
 </div>
 
