--- a/themes/twitter/templates/twitter/nav.html
+++ b/themes/twitter/templates/twitter/nav.html
@@ -13,6 +13,9 @@
           <li{% if current == 2 %} class="active"{% endif %}><a href="{% url albums %}">Albums</a></li>
           <li{% if current == 3 %} class="active"{% endif %}><a href="{% url map %}">Map</a></li>
         </ul>
+        <form action="/search/" method="GET" class="navbar-search pull-right">
+            <input type="text" name="q" placeholder="Search" class="search-query span2">
+        </form>
       </div><!--/.nav-collapse -->
     </div>
   </div>
