Fixes, not cacheing admin views.

--- a/themes/twitter/templates/twitter/albums.html
+++ b/themes/twitter/templates/twitter/albums.html
@@ -41,7 +41,7 @@
 
 
 
-{% for album in albums.object_list %}
+{% for album in albums %}
     <li class="span3">
         <a href="{{ album.get_absolute_url }}" class="thumbnail polaroid">
             {% if album.album_cover %}
@@ -84,21 +84,26 @@
 </div>
 
 
+{% if is_paginated %}
 <div class="pagination">
-<ul>
-    {% if albums.has_previous %}
-    <li><a href="?page={{ albums.previous_page_number }}">Prev</a></li>
-    {% endif %}
-    {% if albums.number %}
-    <li class="active">
-        <a href="?page={{ albums.number }}">{{ albums.number }}</a>
-    </li>
-    {% endif %}
-    {% if albums.has_next %}
-    <li><a href="?page={{ albums.next_page_number }}">Next</a></li>
-    {% endif %}
-</ul>
+    <ul>
+        {% if page_obj.has_previous %}
+        <li><a href="?page={{ page_obj.previous_page_number }}">Prev</a></li>
+        <li><a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a></li>
+        {% endif %}
+        <li class="active">
+            <a href="?page={{ page_obj.number }}">{{ page_obj.number }}</a>
+        </li>
+        
+        
+        {% if page_obj.has_next %}
+        <li><a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a></li>
+        <li><a href="?page={{ page_obj.next_page_number }}">Next</a></li>
+        {% endif %}
+    </ul>
 </div>
+{% endif %}
+
 
 </div>
 {% if album.has_child_albums %}
