add pop over to albums page.

--- a/themes/twitter/templates/twitter/albums.html
+++ b/themes/twitter/templates/twitter/albums.html
@@ -155,7 +155,10 @@ $(function () {
             .addClass('icon-pause');
         modal.modal(options);
     });
-
+    $('.polaroid').popover({
+        delay: {show: 1000, hide:100},
+        placement: 'bottom'
+    });
     
 
     
