--- a/apps/administrator/templates/administrator/nav.html
+++ b/apps/administrator/templates/administrator/nav.html
@@ -5,6 +5,7 @@
       <li {% if nav == 2 %}class="active"{% endif %}><a href="{% url admin_albums %}"><i class="{% if nav == 2%}icon-white{% endif %} icon-book"></i> Albums</a></li>
       <li {% if nav == 3 %}class="active"{% endif %}><a href="{% url admin_locations %}"><i class="{% if nav == 3 %}icon-white{% endif %} icon-map-marker"></i> Locations</a></li>
       <li {% if nav == 4 %}class="active"{% endif %}><a href="{% url comment_list_view %}"><i class="{% if nav == 4 %}icon-white{% endif %} icon-comment"></i> Comments</a></li>
+      <li><a href=""><i class="icon-user"></i> Users</a></li>
         <li class="nav-header">Settings</li>
       <li {% if nav == 5 %}class="active"{% endif %}><a href="{% url settings %}"><i class="icon-cog"></i> Settings</a></li>
       <li {% if nav == 6 %}class="active"{% endif %}><a href="{% url admin_utilities %}"><i class="icon-list-alt"></i> Utilities</a></li>
