--- a/themes/default/templates/default/albums.html
+++ b/themes/default/templates/default/albums.html
@@ -1,6 +1,6 @@
-{% extends "twitter/base.html" %}
+{% extends "default/base.html" %}
 {% block nav %}
-{% include "twitter/nav.html" with current=2 %}
+{% include "default/nav.html" with current=2 %}
 {% endblock nav %}
 {% block main_content %}
 
