--- a/themes/default/templates/default/base.html
+++ b/themes/default/templates/default/base.html
@@ -8,9 +8,9 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="{{ STATIC_URL }}default/css/bootstrap.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}default/css/custom.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}default/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ STATIC_URL }}slideshow/css/bootstrap-image-gallery.min.css"
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -18,10 +18,10 @@
     <![endif]-->
 
     <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="{{ STATIC_URL }}default/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ STATIC_URL }}default/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ STATIC_URL }}default/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="{{ STATIC_URL }}default/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="{{ STATIC_URL }}bootstrap/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ STATIC_URL }}bootstrap/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ STATIC_URL }}bootstrap/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="{{ STATIC_URL }}bootstrap/ico/apple-touch-icon-57-precomposed.png">
     {% block extra_head %}{% endblock extra_head %}
   </head>
 
@@ -63,19 +63,19 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{ STATIC_URL }}default/js/jquery.js"></script>
-    <script src="{{ STATIC_URL }}default/js/bootstrap-transition.js"></script>
-    <script src="{{ STATIC_URL }}default/js/bootstrap-alert.js"></script>
-    <script src="{{ STATIC_URL }}default/js/bootstrap-modal.js"></script>
-    <script src="{{ STATIC_URL }}default/js/bootstrap-dropdown.js"></script>
-    <script src="{{ STATIC_URL }}default/js/bootstrap-scrollspy.js"></script>
-    <script src="{{ STATIC_URL }}default/js/bootstrap-tab.js"></script>
-    <script src="{{ STATIC_URL }}default/js/bootstrap-tooltip.js"></script>
-    <script src="{{ STATIC_URL }}default/js/bootstrap-popover.js"></script>
-    <script src="{{ STATIC_URL }}default/js/bootstrap-button.js"></script>
-    <script src="{{ STATIC_URL }}default/js/bootstrap-collapse.js"></script>
-    <script src="{{ STATIC_URL }}default/js/bootstrap-carousel.js"></script>
-    <script src="{{ STATIC_URL }}default/js/bootstrap-typeahead.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/jquery.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-transition.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-alert.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-modal.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-dropdown.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-scrollspy.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-tab.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-tooltip.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-popover.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-button.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-collapse.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-carousel.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-typeahead.js"></script>
     <script src="{{ STATIC_URL }}slideshow/js/load-image.js"></script>
     <script src="{{ STATIC_URL }}slideshow/js/bootstrap-image-gallery.min.js"></script>
     {% block extra_foot %}{% endblock extra_foot %}
