Changes to admin base

--- a/apps/administrator/templates/administrator/base.html
+++ b/apps/administrator/templates/administrator/base.html
@@ -8,10 +8,10 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="{{ STATIC_URL }}administrator/css/bootstrap.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}administrator/css/added.css" rel="stylesheet">
 
-    <link href="{{ STATIC_URL }}administrator/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -127,19 +127,19 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{ STATIC_URL }}administrator/js/jquery.js"></script>
-    <script src="{{ STATIC_URL }}administrator/js/bootstrap-transition.js"></script>
-    <script src="{{ STATIC_URL }}administrator/js/bootstrap-alert.js"></script>
-    <script src="{{ STATIC_URL }}administrator/js/bootstrap-modal.js"></script>
-    <script src="{{ STATIC_URL }}administrator/js/bootstrap-dropdown.js"></script>
-    <script src="{{ STATIC_URL }}administrator/js/bootstrap-scrollspy.js"></script>
-    <script src="{{ STATIC_URL }}administrator/js/bootstrap-tab.js"></script>
-    <script src="{{ STATIC_URL }}administrator/js/bootstrap-tooltip.js"></script>
-    <script src="{{ STATIC_URL }}administrator/js/bootstrap-popover.js"></script>
-    <script src="{{ STATIC_URL }}administrator/js/bootstrap-button.js"></script>
-    <script src="{{ STATIC_URL }}administrator/js/bootstrap-collapse.js"></script>
-    <script src="{{ STATIC_URL }}administrator/js/bootstrap-carousel.js"></script>
-    <script src="{{ STATIC_URL }}administrator/js/bootstrap-typeahead.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/jquery.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-transition.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-alert.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-modal.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-dropdown.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-scrollspy.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-tab.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-tooltip.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-popover.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-button.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-collapse.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-carousel.js"></script>
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-typeahead.js"></script>
     <script src="{{ STATIC_URL }}administrator/js/admin.js"></script>
     {% block extra_foot %}{% endblock extra_foot %}
 
