--- a/apps/administrator/templates/administrator/login.html
+++ b/apps/administrator/templates/administrator/login.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
  
     <!-- Le styles -->
-    <link href="{{ STATIC_URL }}administrator/css/bootstrap.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       /* Override some defaults */
       html, body {
