Add experiments back in.

--- a/themes/default/templates/default/albums.html
+++ b/themes/default/templates/default/albums.html
@@ -156,6 +156,11 @@ $(function () {
         modal.modal(options);
     });
 
+    $('.polaroid').popover({
+       delay: {show: 1000, hide: 100},
+       placement: 'bottom'
+    });
+
     
 
     
