Fix for issue #126.

--- a/themes/default/templates/default/base.html
+++ b/themes/default/templates/default/base.html
@@ -33,6 +33,9 @@
 		<div class="row">
 			{% block main_content %}{% endblock main_content %}
 		</div>
+        <footer class="footer">
+            <p>Powered by <a href="https://github.com/fotochest/fotochest">FotoChest</a> version {{ version }}</p>
+        </footer>
     </div> <!-- /container -->
     <!-- modal-gallery is the modal dialog used for the image gallery -->
     <div id="modal-gallery" class="modal modal-gallery hide fade">
