--- a/apps/administrator/templates/administrator/comment_list_view.html
+++ b/apps/administrator/templates/administrator/comment_list_view.html
@@ -13,17 +13,42 @@
     <tr>
         <th>Author</th>
         <th>Comment</th>
-        <th>Link</th>
-        <th>Delete</th>
+        <th>Action</th>
     </tr>
     </thead>
     <tbody>
     {% for comment in comments %}
+    <div class="modal hide" id="delete_comment_{{ comment.id }}">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">×</button>
+            <h3>Are you sure?</h3>
+        </div>
+        <div class="modal-body">
+            <p>Are you sure you want to delete the comment:</p>
+            <pre>
+                {{ comment.comment }}
+            </pre>
+        </div>
+        <div class="modal-footer">
+            <a href="#" class="btn" data-dismiss="modal">Close</a>
+            <a href="{% url comment_delete_view comment_id=comment.id %}" class="btn btn-danger">Delete Comment</a>
+        </div>
+    </div>
     <tr>
         <td>{{ comment.user_name }}</td>
-        <td>{{ comment.comment|truncatewords:30 }}</td>
-        <td><a href="{{ comment.content_object.get_absolute_url }}" class="btn btn-primary" target="_blank">Photo</a></td>
-        <td><a href="#" class="btn btn-danger">Delete</a></td>
+        <td width="75%">{{ comment.comment|truncatewords:30 }}</td>
+        <td>
+            <div class="btn-group">
+                <button class="btn btn-primary">Action</button>
+                <button class="btn dropdown-toggle btn-primary" data-toggle="dropdown">
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a href="{{ comment.content_object.get_absolute_url }}" target="_blank">View</a></li>
+                    <li><a href="#delete_comment_{{ comment.id }}" data-toggle="modal">Delete</a></li>
+                </ul>
+            </div>
+        </td>
     </tr>
     {% endfor %}
     </tbody>
