Fixes for location view.

--- a/themes/default/templates/default/location.html
+++ b/themes/default/templates/default/location.html
@@ -82,7 +82,7 @@ rules: [
 
 <div class="span8">
 <ul class="thumbnails">
-{% for photo in photos.object_list %}
+{% for photo in photos %}
     
     {% include "default/snippets/smaller_item.html" %}
     
