--- a/themes/default/templates/default/photo.html
+++ b/themes/default/templates/default/photo.html
@@ -95,7 +95,7 @@ rules: [
 			    {% if photo.get_previous %}
 				<a href="{{ photo.get_previous }}" class="btn"><i class="icon-arrow-left"></i> Previous</a>
 				{% endif %}
-				<a href="{{ photo.get_fullscreen }}" class="btn"><i class="icon-picture"></i> Full Screen</a>
+				<a href="{% url photo_fullscreen photo_id=photo.id album_slug=photo.album.slug photo_slug=photo.slug %}" class="btn"><i class="icon-picture"></i> Full Screen</a>
 				{% if enable_download %}
 				<a href="{% url photo_download photo_id=photo.id %}" class="btn"><i class="icon-download-alt"></i> Download Full Size</a>
 				{% endif %}
@@ -117,8 +117,8 @@ rules: [
 					<div id="small_map"></div>
 					<h6>By {{ photo.user.first_name }} {{ photo.user.last_name }}</h6>
 					<a href="{{ photo.album.get_absolute_url }}">From {{ photo.album }}</a>
-					<p>This photo was uploaded on {{ photo.date_uploaded|date:"F j Y" }}, and taken in <a href="{% url photo_manager.views.location location_slug=photo.location.slug %}">{{ photo.location.city }}, {{ photo.location.get_country_display }}</a>.</p>
-					<h4>Other photos from <a href="{% url photo_manager.views.location location_slug=photo.location.slug %}">{{ photo.location }}</a></h4>
+					<p>This photo was uploaded on {{ photo.date_uploaded|date:"F j Y" }}, and taken in <a href="{% url photo_location location_slug=photo.location.slug %}">{{ photo.location.city }}, {{ photo.location.get_country_display }}</a>.</p>
+					<h4>Other photos from <a href="{% url photo_location location_slug=photo.location.slug %}">{{ photo.location }}</a></h4>
 					
 					
 					<ul class="thumbnails">
