--- a/apps/administrator/templates/administrator/albums.html
+++ b/apps/administrator/templates/administrator/albums.html
@@ -9,7 +9,7 @@
 {% block main_content %}
 <div class="modal hide fade" id="addAlbum">
     <div class="modal-header">
-      <a data-dismiss="modal" class="close">×</a>
+      <button type="button" data-dismiss="modal" class="close">×</button>
       <h3>Add Album</h3>
     </div>
     <div class="modal-body">
@@ -33,7 +33,7 @@
   
 <div class="modal hide fade" id="chooseLocation">
     <div class="modal-header">
-      <a data-dismiss="modal" class="close">×</a>
+      <button type="button" data-dismiss="modal" class="close">×</button>
       <h3>Choose Location</h3>
     </div>
     <div class="modal-body">
@@ -84,6 +84,21 @@
     </thead>
     <tbody>
     {% for album in albums %}
+    <div class="modal hide fade" id="edit_album_{{ album.id }}">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">×</button>
+            <h3>Edit Album</h3>
+        </div>
+        <div class="modal-body">
+
+
+        </div>
+        <div class="modal-footer">
+            <a href="#" class="btn" data-dismiss="modal">Close</a>
+            <a href="#" class="btn btn-success">Save changes</a>
+            <a href="#" class="btn btn-danger">Delete</a>
+        </div>
+    </div>
     {% load thumbnail %}
     {% thumbnail album.get_album_cover.image "240x165" as im %}
         <tr title="{{ album }}" data-content="<img src='{{ im.url }}'>" class="pop">
@@ -98,7 +113,7 @@
                         <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a href="{{ album.get_admin_url }}">Edit</a></li>
+                        <li><a href="#edit_album_{{ album.id }}" data-toggle="modal">Edit</a></li>
                         <li><a href="#">View Photos</a></li>
                         <li><a href="#chooseLocation" data-toggle="modal">Add Photos</a></li>
                         <!-- dropdown menu links -->
