--- a/apps/administrator/templates/administrator/albums.html
+++ b/apps/administrator/templates/administrator/albums.html
@@ -31,43 +31,7 @@
     </form>
   </div>
   
-<div class="modal hide fade" id="chooseLocation">
-    <div class="modal-header">
-      <button type="button" data-dismiss="modal" class="close">×</button>
-      <h3>Choose Location</h3>
-    </div>
-    <div class="modal-body">
-      <h4>Select Album and Location</h4>
-      <p>Select the album and location that you want to associate you uploaded photos with.</p>
-      <form method="GET" action="{% url administrator.views.choose %}">
-      <label>Album Name:</label>
-          <select name="album">
-              {% for album in form_albums %}
-              <option value="{{ album.slug }}">{{ album.title }}</option>
-              
-          {% endfor %}
-          
-          </select>
-          <input type="hidden" name="user_id" value="{{ request.user.id }}">
-          
-          <label>Location</label>
-          <select name="location">
-              {% for location in form_locations %}
-              <option value="{{ location.slug }}">{{ location }}</option>
-              
-          {% endfor %}
-          
-          </select>
 
-      
-    </div>
-    <div class="modal-footer">
-      <a data-dismiss="modal" class="btn" href="#">Close</a>
-      <input type="submit" value="Proceed to Upload" class="btn btn-primary">
-      
-    </div>
-    </form>
-  </div>
 
 <div class="page-header">
 <h2>Albums</h2>
@@ -84,6 +48,31 @@
     </thead>
     <tbody>
     {% for album in albums %}
+    <div class="modal hide fade" id="addPhotos_{{ album.id }}">
+        <div class="modal-header">
+            <button type="button" data-dismiss="modal" class="close">×</button>
+            <h3>Choose Location</h3>
+        </div>
+        <form method="GET" action="{% url administrator.views.choose %}">
+        <div class="modal-body">
+
+            <p>Select the album and location that you want to associate you uploaded photos with.</p>
+                <input type="hidden" name="album_id" value="{{ album.id }}">
+
+                <label>Location</label>
+                <select name="location">
+                    {% for location in form_locations %}
+                    <option value="{{ location.slug }}">{{ location }}</option>
+                    {% endfor %}
+                </select>
+        </div>
+        <div class="modal-footer">
+            <a data-dismiss="modal" class="btn" href="#">Close</a>
+            <input type="submit" value="Proceed to Upload" class="btn btn-primary">
+
+        </div>
+        </form>
+    </div>
     <div class="modal hide fade" id="edit_album_{{ album.id }}">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">×</button>
@@ -98,6 +87,25 @@
             <a href="#" class="btn btn-success">Save changes</a>
             <a href="#" class="btn btn-danger">Delete</a>
         </div>
+    </div>
+    <div class="modal hide fade" id="addChildAlbum_{{ album.id }}">
+        <form>
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">×</button>
+            <h3>Add Child Album</h3>
+        </div>
+        <div class="modal-body">
+        <label>Title</label>
+        <input type="text" class="span4" name="title">
+        <label>Description</label>
+        <textarea class="span4" rows="6"></textarea>
+        <input type="hidden" value="{{ album.id }}" name="parentAlbum">
+        </div>
+        <div class="modal-footer">
+            <a href="#" class="btn" data-dismiss="modal">Close</a>
+            <a href="#" class="btn btn-success"><i class="icon-plus icon-white"></i> Add Album</a>
+        </div>
+        </form>
     </div>
     {% load thumbnail %}
     {% thumbnail album.get_album_cover.image "240x165" as im %}
@@ -114,8 +122,8 @@
                     </button>
                     <ul class="dropdown-menu">
                         <li><a href="#edit_album_{{ album.id }}" data-toggle="modal">Edit</a></li>
-                        <li><a href="#">View Photos</a></li>
-                        <li><a href="#chooseLocation" data-toggle="modal">Add Photos</a></li>
+                        <li><a href="{% url admin_album_view_fotos album_id=album.id %}">View Photos</a></li>
+                        <li><a href="#addPhotos_{{ album.id }}" data-toggle="modal">Add Photos</a></li>
                         <!-- dropdown menu links -->
                         <li class="divider"></li>
                         <li><a href="#addChildAlbum_{{ album.id }}" data-toggle="modal">Add Child Album</a></li>
