--- a/apps/administrator/templates/administrator/nav.html
+++ b/apps/administrator/templates/administrator/nav.html
@@ -2,6 +2,7 @@
     <ul class="nav nav-list">
       
       <li {% if nav == 1 %}class="active"{% endif %}><a href="{% url admin_dashboard %}"><i class="{% if nav == 1 %}icon-white{% endif %} icon-home"></i> Home</a></li>
+      <li><a href="#"><i class="icon-picture"></i> Photos</a></li>
       <li {% if nav == 2 %}class="active"{% endif %}><a href="{% url admin_albums %}"><i class="{% if nav == 2%}icon-white{% endif %} icon-book"></i> Albums</a></li>
       <li {% if nav == 3 %}class="active"{% endif %}><a href="{% url admin_locations %}"><i class="{% if nav == 3 %}icon-white{% endif %} icon-map-marker"></i> Locations</a></li>
       <li {% if nav == 4 %}class="active"{% endif %}><a href="{% url comment_list_view %}"><i class="{% if nav == 4 %}icon-white{% endif %} icon-comment"></i> Comments</a></li>
